<resources>
    <string name="app_name">三川智控演示</string>
    <string name="action_settings">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting">设备管理</string>
    <string name="title_main">三川智控展示</string>
    <string name="st_slc_10">十通道智能继电器负荷控制器</string>
    <string name="st_slc_6">六通道智能继电器负荷控制器</string>
    <string name="st_slc_2_3">双路智能三相电源切换器</string>
    <string name="six_sensor">第六感官</string>
    <string name="tongdao">通道</string>
    <string name="error_getswitchinfo">获取开关信息失败清重试！</string>
    <string name="sixsensor">第六感</string>
    <string name="zhendongqiangdu">振动强度</string>
    <string name="qinxiejiao">平面倾斜角</string>
    <string name="dianchivoltage">电池电压</string>
    <string name="people">人员信息</string>
    <string name="light">光线强度</string>
    <string name="atm">大气压</string>
    <string name="humidity">湿度</string>
    <string name="tmp">温度</string>
    <string name="smoke">烟雾</string>
    <string name="time">时间</string>
    <string name="qinxie">倾斜</string>
    <string name="zhenchan">正常</string>
    <string name="clean">清洁</string>
    <string name="pollution">污染</string>
    <string name="you">优</string>
    <string name="liang">良</string>
    <string name="qinduwuran">轻度污染</string>
    <string name="zhongduwuran">中度污染</string>
    <string name="zhongduwuran4">重度污染</string>
    <string name="yanzhongwuran">严重污染</string>
    <string name="jihan">极寒</string>
    <string name="hanleng">寒冷</string>
    <string name="liangshuan">凉爽</string>
    <string name="shushi">舒适</string>
    <string name="menre">闷热</string>
    <string name="jire">极热</string>
    <string name="ganzao">干燥</string>
    <string name="chaoshi">潮湿</string>
    <string name="qiyagao">气压高</string>
    <string name="qiyadi">气压低</string>
    <string name="zhenchang">正常</string>
    <string name="jiruo">极弱</string>
    <string name="shizhong">适中</string>
    <string name="qiang">强</string>
    <string name="henqiang">很强</string>
    <string name="jiqiang">极强</string>
    <string name="warning_people">房间有人进入！</string>
    <string name="zhengddongqiangdu">振动强度</string>
    <string name="jiaquan">、甲醛</string>
    <string name="warning_temp">温度报警！！！</string>
    <string name="time_formate">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="warning">超过预警值！</string>
    <string name="six_sensor_en">ST-Sensus</string>
    <string name="st_slc_6_en">ST-SLC-6</string>
    <string name="st_slc_10_en">ST-SLC-10</string>
    <string name="homepage">主页</string>
    <string name="about">关于</string>
    <string name="checkupdate">检查更新</string>
    <string name="title_devicemanager">设备管理</string>
    <string name="adddevices">添加设备</string>
    <string name="alert_netconfig">wifi信息发送中,请按下设备复位按钮,配置过程大概需要30s</string>
    <string name="canshupeizhi">参数配置</string>
    <string name="commit">提交</string>
    <string name="net_config">网络相关参数设置</string>
    <string name="scaning">正在扫描局域网内的设备</string>
    <string name="noscanresult">没有发现设备</string>
    <string name="hasscanresult">共发现设备%1$d台</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="stay_password">记住密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="create_account">注册帐号</string>
    <string name="sensor_des">可燃气体及烟雾浓度监测预警、建筑的震动与姿态监测、TVOC(甲醛)/空气质量监测、人体感应、语音辨别、红外家电、无线远程控制。</string>
    <string name="st_slc10_des">交流电过零投切、过压/欠压/过流保护、本次/远程测控、信号输入/输出可编程接口、在线APP编程/超低功耗、RS485/WIFI通讯</string>
    <string name="st_slc6_des">交流电过零投切、过压/欠压/过流保护、本次/远程测控、信号输入/输出可编程接口、在线APP编程/超低功耗、RS485/WIFI通讯</string>
    <string name="st_slc_2_3_des">交流电过零投切、过压/欠压/过流保护、本次/远程测控、信号输入/输出可编程接口、在线APP编程/超低功耗、RS485/WIFI通讯</string>
    <string name="finddevices">发现设备</string>
    <string name="tips_hasnodevice">还没有添加任何设备,点击右上角添加设备吧~</string>
    <string name="add_success">添加成功</string>
    <string name="waiwangport">外网port:</string>
    <string name="waiwangip">外网IP:</string>
    <string name="zhilianport">直连端口:</string>
    <string name="zhilianiip">直连ip:</string>
    <string name="tips_editaddr">请输入十六进制通讯地址</string>
    <string name="rsaddr">通讯地址:</string>
    <string name="name">名称:</string>
    <string name="tips_rditname">请输入名称</string>
    <string name="ip">bendiip</string>
    <string name="port">bendiport</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="type">类型</string>
    <string name="tips_addr_exist">地址已存在</string>
    <string name="queding">确定</string>
    <string name="tips_changesuccess">修改成功!重启设备后生效</string>
    <string name="base_setting">基本配置</string>
    <string name="advance_setting">高级配置</string>
    <string name="control">控制</string>
    <string name="add2local">添加到本地</string>
    <string name="bendiip">本地ip</string>
    <string name="bendiport">本地端口</string>
    <string name="advancedsetting">高级配置</string>
    <string name="ap_ky">热点密码</string>
    <string name="ap_ssid">热点名称</string>
    <string name="alert_isconfig">确认提交?</string>
    <string name="net_setting">配置网络</string>
    <string name="tips_check_power">1.设备是否已接通电源</string>
    <string name="tips_please_check">请检查:</string>
    <string name="tips_choose_wlan">点击选择WLAN网络</string>
    <string name="tips_is_network_vailable">2.WLAN网络是否连接</string>
    <string name="tips_scan_aglin">重新扫描</string>
    <string name="tips_add_handler">手动添加</string>
    <string name="tips_reset_devices">3.检查完毕还是无法添加,请尝试重置设备</string>
</resources>
